[package]
name = "rhymuproc"
version = "0.1.0"
description = "Discover and interact with operating system processes"
authors = ["Richard Walters <rwalters@digitalstirling.com>"]
edition = "2018"
license-file = "LICENSE.txt"
readme = "README.md"
categories = ["os"]
keywords = ["process", "cross-platform"]
repository = "https://github.com/rhymu8354/Processes.git"

[[bin]]
name = "mock_subprocess"
path = "bin/mock_subprocess.rs"

[dependencies]

[dev-dependencies]
structopt = "0.3"
