[package]
name = "rhymuproc"
version = "1.1.0"
description = "Discover and interact with operating system processes"
authors = ["Richard Walters <rwalters@digitalstirling.com>"]
edition = "2018"
license-file = "LICENSE.txt"
readme = "README.md"
categories = ["os"]
keywords = ["process", "cross-platform"]
repository = "https://github.com/rhymu8354/Processes.git"

[[bin]]
name = "mock_subprocess"
path = "bin/mock_subprocess.rs"

[dependencies]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
uuid = { version = "0.8", features = ["v4"] }
